--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- index.html --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -6,92 +7,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Pretty Pets</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="why.html">Why Choose Us</a></li>
-        <li><a href="grooming.html">Grooming</a></li>
-        <li><a href="petfood.html">Pet Food</a></li>
-        <li><a href="clinic.html">Mobile Clinic</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="hero">
-      <h2>Your Pet’s Second Best Friend 🐾</h2>
-      <p>Lovingly made in Bangladesh.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Pretty Pets. All rights reserved.</p>
-  </footer>
-</body>
-</html><!-- about.html --><!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>About Us - Pretty Pets</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>About Pretty Pets</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="why.html">Why Choose Us</a></li>
-        <li><a href="grooming.html">Grooming</a></li>
-        <li><a href="petfood.html">Pet Food</a></li>
-        <li><a href="clinic.html">Mobile Clinic</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h2>Pretty Pets is your pet’s second-best friend (after you, of course).</h2>
-    <p>From bubble baths to tasty treats, we do it all — lovingly made in Bangladesh.</p>
-  </main>
-  <footer>
-    <p>&copy; 2025 Pretty Pets. All rights reserved.</p>
-  </footer>
-</body>
-</html><!-- why.html --><!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Why Choose Us - Pretty Pets</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Why Choose Pretty Pets?</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="why.html">Why Choose Us</a></li>
-        <li><a href="grooming.html">Grooming</a></li>
-        <li><a href="petfood.html">Pet Food</a></li>
-        <li><a href="clinic.html">Mobile Clinic</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <ul>
-      <li>🐕 Expert Groomers</li>
-      <li>🍖 In-house Pet Food Production (Quality & Affordable)</li>
-      <li>🚑 Mobile Pet Clinic (We come to you)</li>
-      <li>💬 Friendly, Local, and Reliable</li>
-    </ul>
-    <p>📍 Available in Moghbazar & nearby areas<br>
-    🕒 Appointments open 7 days a week</p>
-  </main>
-  <footer>
-    <p>&copy; 2025 Pretty Pets. All rights reserved.</p>
-  </footer>
+
+  <section class="hero">
+    <div class="hero-image">
+      <img src="homepage-banner.jpg" alt="Pretty Pets Banner" />
+    </div>
+    <div class="hero-text">
+      <h1>Love, care & treats —<br>delivered to your doorstep</h1>
+      <p>Affordable grooming, pet food & mobile vet services<br>from Moghbazar’s best</p>
+      <div class="hero-buttons">
+        <a href="contact.html" class="btn primary">Book Now</a>
+        <a href="petfood.html" class="btn secondary">Explore Products</a>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
