--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <section class="hero">
     <div class="hero-image">
-      <img src="homepage-banner.jpg" alt="Pretty Pets Banner" />
+      <img src="homepage-banner.jpeg" alt="Pretty Pets Banner" />
     </div>
     <div class="hero-text">
       <h1>Love, care & treats —<br>delivered to your doorstep</h1>
@@ -24,3 +24,4 @@
 
 </body>
 </html>
+
