--- a/about.html
+++ b/about.html
@@ -26,7 +26,59 @@
       <li>💬 Friendly, Local, and Reliable</li>
     </ul>
   </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Us | Pretty Pets</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <section class="about-hero">
+    <h1>🐶 About Us</h1>
+    <p>
+      Pretty Pets is your pet’s second-best friend (after you of course).<br>
+      From bubble baths to tasty treats, we do it all — lovingly made in Bangladesh.
+    </p>
+
+    <h2>Why Choose Us?</h2>
+
+    <div class="about-grid">
+      <div class="box">🍖 In-house Pet Food Production<br><small>(Quality & Affordable)</small></div>
+      <div class="box">🛁 Mobile Pet Clinic<br><small>(We come to you)</small></div>
+      <div class="about-image">
+        <img src="about-banner.jpeg" alt="Cute cat banner">
+      </div>
+      <div class="box">🐕 Expert Groomers</div>
+      <div class="box">💬 Friendly. Local. and Reliable</div>
+    </div>
+
+    <footer class="about-footer">
+      <div class="brand">
+        <strong>🐾 PRETTY PETS</strong><br>
+        Love, care and treats —<br>
+        delivered to your doorstep
+      </div>
+      <div class="quick-links">
+        <strong>QUICK LINKS</strong><br>
+        About Us<br>
+        Book an Appointment<br>
+        Order Pet Food<br>
+        FAQ
+      </div>
+      <div class="socials">
+        <strong>FOLLOW US</strong><br>
+        🟤 Instagram<br>
+        ⚫ Facebook<br>
+        ⚪ TikTok
+      </div>
+    </footer>
+  </section>
+
+</body>
+</html>
   <section>
     <h2>📍 Locations & Availability</h2>
     <p>Available in Moghbazar & nearby areas</p>
