--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <div class="box">🍖 In-house Pet Food Production<br><small>(Quality & Affordable)</small></div>
       <div class="box">🛁 Mobile Pet Clinic<br><small>(We come to you)</small></div>
       <div class="about-image">
-        <img src="about-banner.jpeg" alt="Cute cat banner">
+        <img src="about-banner.jpeg" alt="About banner">
       </div>
       <div class="box">🐕 Expert Groomers</div>
       <div class="box">💬 Friendly. Local. and Reliable</div>
