--- a/index.html
+++ b/index.html
@@ -24,4 +24,11 @@
 
 </body>
 </html>
+<nav>
+  <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
