--- a/about.html
+++ b/about.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <nav>
+    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
   <section class="about-hero">
     <h1>🐶 About Us</h1>
     <p>
@@ -21,13 +29,13 @@
       <div class="box">🍖 In-house Pet Food Production<br><small>(Quality & Affordable)</small></div>
       <div class="box">🛁 Mobile Pet Clinic<br><small>(We come to you)</small></div>
       <div class="about-image">
-        <img src="about-banner.jpeg" alt="Cute cat banner" />
+        <img src="about-banner.jpeg" alt="Cute cat banner" style="max-width:100%; border-radius:12px;" />
       </div>
       <div class="box">🐕 Expert Groomers</div>
       <div class="box">💬 Friendly. Local. and Reliable</div>
     </div>
 
-    <footer class="about-footer">
+    <footer class="about-footer" style="margin-top: 50px; padding-top: 30px; border-top: 1px solid #ccc;">
       <div class="brand">
         <strong>🐾 PRETTY PETS</strong><br>
         Love, care and treats —<br>
