--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
+</nav>
   <section class="hero">
     <div class="hero-image">
       <img src="homepage-banner.jpeg" alt="Pretty Pets Banner" />
@@ -29,3 +30,4 @@
 
 </body>
 </html>
+
