--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
       <div class="box">🍖 In-house Pet Food Production<br><small>(Quality & Affordable)</small></div>
       <div class="box">🛁 Mobile Pet Clinic<br><small>(We come to you)</small></div>
       <div class="about-image">
-        <img src="about-banner.jpeg" alt="Cute cat banner" style="max-width:100%; border-radius:12px;" />
+        <img src="about-banner.jpeg" alt="Cute cat banner" />
       </div>
       <div class="box">🐕 Expert Groomers</div>
       <div class="box">💬 Friendly. Local. and Reliable</div>
     </div>
 
-    <footer class="about-footer" style="margin-top: 50px; padding-top: 30px; border-top: 1px solid #ccc;">
+    <footer class="about-footer">
       <div class="brand">
         <strong>🐾 PRETTY PETS</strong><br>
         Love, care and treats —<br>
