--- a/about.html
+++ b/about.html
@@ -8,42 +8,19 @@
 </head>
 <body>
 
+  <!-- Simple navigation -->
   <nav>
     <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="grooming.html">Grooming</a></li>
     </ul>
   </nav>
 
-  <section class="about-hero">
-    <h1>🐶 About Us</h1>
-    <p>
-      Pretty Pets is your pet’s second-best friend (after you of course).<br>
-      From bubble baths to tasty treats, we do it all — lovingly made in Bangladesh.
-    </p>
-
-    <footer class="about-footer">
-      <div class="brand">
-        <strong>🐾 PRETTY PETS</strong><br>
-        Love, care and treats —<br>
-        delivered to your doorstep
-      </div>
-      <div class="quick-links">
-        <strong>QUICK LINKS</strong><br>
-        About Us<br>
-        Book an Appointment<br>
-        Order Pet Food<br>
-        FAQ
-      </div>
-      <div class="socials">
-        <strong>FOLLOW US</strong><br>
-        Instagram<br>
-        Facebook<br>
-        TikTok
-      </div>
-    </footer>
-  </section>
+  <!-- Only the image, centered -->
+  <div style="text-align: center; margin: 30px;">
+    <img src="about-banner.jpeg" alt="About and Why Choose Us" style="max-width: 95%; border-radius: 12px;" />
+  </div>
 
 </body>
 </html>
