--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Simple navigation -->
+  <!-- Navigation -->
   <nav>
     <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
       <li><a href="index.html">Home</a></li>
@@ -17,9 +17,9 @@
     </ul>
   </nav>
 
-  <!-- Only the image, centered -->
+  <!-- JUST the image (no extra text) -->
   <div style="text-align: center; margin: 30px;">
-    <img src="about-banner.jpeg" alt="About and Why Choose Us" style="max-width: 95%; border-radius: 12px;" />
+    <img src="about-banner.jpeg" alt="Why Choose Us" style="max-width: 95%; border-radius: 12px;" />
   </div>
 
 </body>
