--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 </nav>
   <!-- Insert your services banner image -->
   <div style="text-align: center; margin: 30px;">
-    <img src="services-banner.jpeg" alt="Extended Services" style="max-width: 95%; border-radius: 12px;" />
+    <img src="extended-services-banner.jpeg" alt="Extended Services" style="max-width: 95%; border-radius: 12px;" />
   </div>
 </body>
 </html>
