--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="grooming.html">Grooming</a></li>
+      <li><a href="services.html">Services</a></li>
     </ul>
   </nav>
 
