--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
+      <li><a href="grooming.html">Grooming</a></li>
+      <li><a href="services.html">Services</a></li>
   </ul>
 </nav>
   <section class="hero">
@@ -30,4 +32,5 @@
 
 </body>
 </html>
+
 
