--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="contact.html">Contact</a></li>
       <li><a href="grooming.html">Grooming</a></li>
       <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
   <section class="hero">
@@ -32,5 +33,6 @@
 
 </body>
 </html>
+
 
 
