--- a/grooming.html
+++ b/grooming.html
@@ -15,6 +15,8 @@
       <li><a href="about.html">About</a></li>
       <li><a href="grooming.html">Grooming</a></li>
       <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      
     </ul>
   </nav>
 
