--- a/about.html
+++ b/about.html
@@ -23,6 +23,16 @@
   <div style="text-align: center; margin: 30px;">
     <img src="about-banner.jpeg" alt="Why Choose Us" style="max-width: 95%; border-radius: 12px;" />
   </div>
-
+<footer style="background:#f8f8f8; padding: 20px; text-align:center; font-size:14px; margin-top: 50px;">
+  <div>🐾 <strong>PRETTY PETS</strong> – Your pet’s second-best friend (after you)</div>
+  <div style="margin-top: 8px;">
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="grooming.html">Grooming</a> |
+    <a href="services.html">Services</a> |
+    <a href="contact.html">Contact</a>
+  </div>
+  <div style="margin-top: 10px;">© 2025 Pretty Pets. All rights reserved.</div>
+</footer>
 </body>
 </html>
