--- a/index.html
+++ b/index.html
@@ -2,48 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pretty Pets - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pretty Pets</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<nav>
-  <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-      <li><a href="grooming.html">Grooming</a></li>
-      <li><a href="services.html">Services</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-  <section class="hero">
-    <div class="hero-image">
-      <img src="homepage-banner.jpeg" alt="Pretty Pets Banner" />
-    </div>
-    <div class="hero-text">
-      <h1>Love, care & treats —<br>delivered to your doorstep</h1>
-      <p>Affordable grooming, pet food & mobile vet services<br>from Moghbazar’s best</p>
-      <div class="hero-buttons">
-        <a href="contact.html" class="btn primary">Book Now</a>
-        <a href="petfood.html" class="btn secondary">Explore Products</a>
-      </div>
-    </div>
+
+  <!-- Navigation -->
+  <nav>
+    <ul style="list-style:none; display:flex; gap:20px; justify-content:center; padding: 20px;">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#grooming">Grooming</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="hero" style="text-align:center;">
+    <img src="homepage-banner.jpeg" alt="Pretty Pets Banner" style="width: 100%; max-width: 100%;">
   </section>
-<footer style="background:#f8f8f8; padding: 20px; text-align:center; font-size:14px; margin-top: 50px;">
-  <div>🐾 <strong>PRETTY PETS</strong> – Your pet’s second-best friend (after you)</div>
-  <div style="margin-top: 8px;">
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a> |
-    <a href="grooming.html">Grooming</a> |
-    <a href="services.html">Services</a> |
-    <a href="contact.html">Contact</a>
-  </div>
-  <div style="margin-top: 10px;">© 2025 Pretty Pets. All rights reserved.</div>
-</footer>
+
+  <!-- About + Why Choose Us -->
+  <section id="about" style="text-align:center; margin-top: 40px;">
+    <img src="about-banner.jpeg" alt="About Pretty Pets" style="width: 100%; max-width: 100%;">
+  </section>
+
+  <!-- Grooming -->
+  <section id="grooming" style="text-align:center; margin-top: 40px;">
+    <img src="grooming-banner.jpeg" alt="Grooming Services" style="width: 100%; max-width: 100%;">
+  </section>
+
+  <!-- Extended Services -->
+  <section id="services" style="text-align:center; margin-top: 40px;">
+    <img src="extended-services.jpeg" alt="Extended Services" style="width: 100%; max-width: 100%;">
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" style="text-align:center; margin-top: 40px;">
+    <img src="contact-banner.jpeg" alt="Contact Info" style="width: 100%; max-width: 100%;">
+  </section>
+
 </body>
 </html>
-
-
-
-
